runtime/tests/cases/syntax/errors/tabs.bobbin
Welcome, traveler. What brings you to the Crossroads Inn?
- I seek information
  The innkeeper leans closer.
  What kind of information do you seek?
  - About the ancient ruins
	Ah, the ruins to the north. Dangerous place.
	Many have gone, few have returned.
  - About the missing merchant
	The merchant? Last seen heading toward the forest.
	Some say bandits, others whisper of darker things.
  Is there anything else I can help with?
- I need a room for the night
  That'll be 5 gold pieces.
  - Pay the fee
	Excellent. Room three, up the stairs.
  - Try to haggle
	The innkeeper frowns.
	Fine, 4 gold. But no breakfast.
  Sleep well, traveler.
- Just passing through
  Safe travels then.
The night grows darker outside.
Perhaps tomorrow will bring answers.
